--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.8.19",
-        "updated": "2026-02-08 11:54:30"
+        "version": "1.8.21",
+        "updated": "2026-02-08 20:27:41"
     },
     "txwelcome": "Добро пожаловать",
     "quotes": [
@@ -148,7 +148,7 @@
     "txdata": "[DF]Данные",
     "txlocdata": "[DF]Расчёты для вашего местоположения совпадают с астрономическим альманахом примерно до 0,0005 угловых секунд³:[DF]",
     "txobjdata": "– Солнце¹ –[~LF]Время: {sun_clocktm}[~LF]Темпоральный час: {sun_temptm}[~LF]Световой день: {sun_daylight}{sun_lighttime}{sun_agnicountdown}{sun_agnihotra}[~LF]Солнцестояние: {sun_soli}[~LF]Равноденствие: {sun_equi}[~LF][~LF]– Луна² –[~LF]Новолуние: {moon_new}[~LF]Полнолуние: {moon_full}[~LF]Лунная ночь: {moon_gordon}[~LF]Освещённость: {moon_illum}[~LF]Размер: {moon_sizep} (85-100){weather_data}[~LF][~LF]– Яркость –[~LF]Венера: {venus_magp} (83-100)[~LF]Марс: {mars_magp} (52-100)[~LF]Юпитер: {jupiter_magp} (87-100)[~LF]Сатурн: {saturn_magp} (77-100)[~LF]Меркурий: {merkur_magp} (0-100)[~LF][~LF]¹ Время: GPS = синхронизировано | Темпоральный час: местный, неравный час (0,0[NDASH]11,9) «ἡ» дня или «ν» ночи. «φ» ночная стража с неравными «минутами» (0φ00[NDASH]3φ59) | {lighttime-}: см. ниже | Световой день и Агнихотра: восход[NDASH]закат сегодня [восход завтра], ⁺ = текущий GPS | ² Полнолуние и новолуние: момент (через/назад дней) | Лунная ночь: см. ниже | ³ Видимый размер Луны около 2000 угл. сек. | ⁴ Погода: суточный ход (Солнце, прогресс, дождь, порывы), сейчас (= ближайшие 3 часа, [font=sdata/DejaVuSansMono.ttf]✝[/font] = более старые данные). | Суточные значения: мин...макс...[ночной мин] (χ = снег)[DF][DF]",
-    "txlegende0": "[b]–– Пояснения:[/b][~LF][~LF]Лунная дата работает аналогично нашей дате, но с ночами вместо дней: Μx·y (p/z), где x = лунный «месяц» года, y = ночь лунного месяца. Поскольку лунные месяцы имеют разную длину, z указывает общее число ночей лунного месяца, p — ночь полнолуния. Ночь заканчивается с восходом Солнца.[~LF][~LF]Световой годовой цикл делит год на восемь фаз нарастания и убывания света (% прогресса фазы): 1. {solcal_lph|0-} ({solcal_dat0}, см. также Имболк), 2a. {solcal_lph|1-} ({solcal_dat1}, см. также Лися), 2b. {solcal_lph|2-} ({solcal_dat2}), 2c. {solcal_lph|3-} ({solcal_dat3}), 3. {solcal_lph|4-} ({solcal_dat4}, см. также Лугнасад), 4a. {solcal_lph|5-} ({solcal_dat5}, см. также Лидун), 4b. {solcal_lph|6-} ({solcal_dat6}) и 4c. {solcal_lph|7-} ({solcal_dat7}). Краткая форма: Φx·y. Даты определяются астрономически и смещаются из года в год.[DF][DF][DF]",
+    "txlegende0": "[b]–– Пояснения:[/b][~LF][~LF]Лунная дата работает аналогично нашей дате, но с ночами вместо дней: Μx·y (p/z), где x = лунный «месяц» года, y = ночь лунного месяца. Поскольку лунные месяцы имеют разную длину, z указывает общее число ночей лунного месяца, p — ночь полнолуния. Ночь заканчивается с восходом Солнца.[~LF][~LF]Световой годовой цикл делит год на восемь фаз нарастания и убывания света (% прогресса фазы): 1. {solcal_lph|0-} ({solcal_dat0}, см. также Имболк), 2a. {solcal_lph|1-} ({solcal_dat1}, см. также Лися), 2b. {solcal_lph|2-} ({solcal_dat2}), 2c. {solcal_lph|3-} ({solcal_dat3}), 3. {solcal_lph|4-} ({solcal_dat4}, см. также Лугнасад), 4a. {solcal_lph|5-} ({solcal_dat5}, см. также Лидун), 4b. {solcal_lph|6-} ({solcal_dat6}) и 4c. {solcal_lph|7-} ({solcal_dat7}). Краткая форма: Ϟx·y. Даты определяются астрономически и смещаются из года в год.[DF][DF][DF]",
     "buttonsolcal": "Световой календарь",
     "char_vowels": "аеёиоуыэюяАЕЁИОУЫЭЮЯ",
     "char_consonants": "бвгджзйклмнпрстфхцчшщБВГДЖЗЙКЛМНПРСТФХЦЧШЩ",
