--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
         "version": "1.8.26",
-        "updated": "2026-02-18 22:05:32"
+        "updated": "2026-02-19 12:16:47"
     },
     "txwelcome": "Добро пожаловать",
     "quotes": [
@@ -130,7 +130,7 @@
         "txgpsdeact": "GPS отключён. Пожалуйста, включите GPS в настройках устройства",
         "activatewlan": "Определение местоположения невозможно.[~LF][~LF]Включены ли Wi-Fi и/или мобильная сеть в настройках устройства?",
         "updateexists": "Доступно обновление «Солнечных часов Гордона» с исправлениями ошибок.[~LF][~LF]Рекомендую обновить приложение.",
-        "waitforgps": "Ожидание местоположения...[~LF][~LF]Пожалуйста, подождите."
+        "waitforgps": "Определяется местоположение...[~LF][~LF]Это может занять несколько секунд."
     },
     "txbodywrap": {
         "txgpsinstruct": "Чтобы изменить местоположение, сделайте свайп влево 2 раза",
