--- a/lang/zh.json
+++ b/lang/zh.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.9.2",
-        "updated": "2026-02-25 13:30:08"
+        "version": "1.9.3",
+        "updated": "2026-02-26 13:42:00"
     },
     "txwelcome": "欢迎",
     "quotes": [
@@ -159,7 +159,7 @@
     "txdata": "[DF]数据",
     "txlocdata": "[DF]您所在位置的计算结果与天文年鉴一致，误差约为 0.0005 角秒³：[DF]",
     "txobjdata": "– 太阳¹ –[~LF]时间: {sun_clocktm}[~LF]不等时: {sun_temptm}[~LF]昼长: {sun_daylight}{sun_lighttime}{sun_agnicountdown}{sun_agnihotra}[~LF]至日: {sun_soli}[~LF]分点: {sun_equi}[~LF][~LF]– 月亮² –[~LF]新月: {moon_new}[~LF]满月: {moon_full}[~LF]月夜: {moon_gordon}[~LF]照明率: {moon_illum}[~LF]视直径: {moon_sizep} (85-100){weather_data}[~LF][~LF]– 亮度 –[~LF]金星: {venus_magp} (83-100)[~LF]火星: {mars_magp} (52-100)[~LF]木星: {jupiter_magp} (87-100)[~LF]土星: {saturn_magp} (77-100)[~LF]水星: {merkur_magp} (0-100)[~LF][~LF]¹ 时间: GPS = 同步 | 不等时: (0,0[NDASH]11,9), 「ἡ」昼 / 「ν」夜。「φ」守更 (0φ00[NDASH]3φ59) | {lighttime-}: 见下 | 昼长 & Agnihotra: 今日出[NDASH]落 [明日出], ⁺ = 当前 GPS | ² 满/新月: 时刻（前/后若干日） | 月夜: 见下 | ³ 月亮 ≈ 2000″ | ⁴ 天气：当日变化 ([font=sdata/DejaVuSansMono.ttf]☀[/font] 太阳, [font=sdata/DejaVuSansMono.ttf]◴[/font] 进度（₁₂₃ = 当前3小时区块）, [font=sdata/DejaVuSansMono.ttf]☂[/font] 降雨可点击 = 雷达, [font=sdata/DejaVuSansMono.ttf]✈[/font] 阵风）。现在 = 接下来的3小时, [font=sdata/DejaVuSansMono.ttf]✝[/font] = 较早数据 | 下方为当日数值：最小...最大...[夜间最低] (χ = 降雪)[DF][DF]",
-    "txlegende0": "[b]–– 说明:[/b][~LF][~LF]月日期的用法类似于普通日期，但以“夜”代替“天”：Μx·y (p/z)，其中 x = 光历年的月周期，y = 该月周期的第几夜。Μ1 是光历年中的第一个满月。由于月周期的长度不同，z 表示该月周期的总夜数，p 表示满月之夜。夜晚在日出时结束。[~LF][~LF]光历年的季节将一年划分为八个昼长增加与减少的阶段：1. {solcal_lph|0-} ({solcal_dat0}，参见 Imbolc)，2a. {solcal_lph|1-} ({solcal_dat1}，参见 Lixia)，2b. {solcal_lph|2-} ({solcal_dat2})，2c. {solcal_lph|3-} ({solcal_dat3})，3. {solcal_lph|4-} ({solcal_dat4})，4a. {solcal_lph|5-} ({solcal_dat5})，4b. {solcal_lph|6-} ({solcal_dat6})，4c. {solcal_lph|7-} ({solcal_dat7})。简写：Ϟx·y（x = 阶段，y = 进度[SP]%）。日期按天文计算确定，每年会有所变化。[DF][DF][DF]",
+    "txlegende0": "[b]–– 说明:[/b][~LF][~LF]月日期的用法类似于普通日期，但以“夜”代替“天”：Μx·y (p/z)，其中 x = 光历年的月周期，y = 该月周期的第几夜。Μ1 是光历年中的第一个满月（≈ 中国农历新年）。由于月周期的长度不同，z 表示该月周期的总夜数，p 表示满月之夜。夜晚在日出时结束。[~LF][~LF]光历年的季节将一年划分为八个昼长增加与减少的阶段：1. {solcal_lph|0-} ({solcal_dat0}，参见 Imbolc)，2a. {solcal_lph|1-} ({solcal_dat1}，参见 Lixia)，2b. {solcal_lph|2-} ({solcal_dat2})，2c. {solcal_lph|3-} ({solcal_dat3})，3. {solcal_lph|4-} ({solcal_dat4})，4a. {solcal_lph|5-} ({solcal_dat5})，4b. {solcal_lph|6-} ({solcal_dat6})，4c. {solcal_lph|7-} ({solcal_dat7})。简写：Ϟx·y（x = 阶段，y = 进度[SP]%）。日期按天文计算确定，每年会有所变化。[DF][DF][DF]",
     "buttonsolcal": "光照日历",
     "txradar": "降雨雷达",
     "char_vowels": "",
