--- a/lang/en.json
+++ b/lang/en.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.9.3",
-        "updated": "2026-02-26 13:42:00"
+        "version": "1.9.4",
+        "updated": "2026-02-26 14:14:19"
     },
     "txwelcome": "Welcome",
     "quotes": [
@@ -152,7 +152,7 @@
     "txdata": "[DF]Data",
     "txlocdata": "[DF]Calculations for your location correspond with the astronomical almanac to approx. 0.0005 arcseconds³:[DF]",
     "txobjdata": "– Sun¹ –[~LF]Time: {sun_clocktm}[~LF]Temp. hour: {sun_temptm}[~LF]Daylight: {sun_daylight}{sun_lighttime}{sun_agnicountdown}{sun_agnihotra}[~LF]Solstice: {sun_soli}[~LF]Equinox: {sun_equi}[~LF][~LF]– Moon² –[~LF]New Moon: {moon_new}[~LF]Full Moon: {moon_full}[~LF]Lunar night: {moon_gordon}[~LF]Illum.: {moon_illum}[~LF]Ang. size: {moon_sizep} (85-100){weather_data}[~LF][~LF]– Brightness –[~LF]Venus: {venus_magp} (83-100)[~LF]Mars: {mars_magp} (52-100)[~LF]Jupiter: {jupiter_magp} (87-100)[~LF]Saturn: {saturn_magp} (77-100)[~LF]Mercury: {merkur_magp} (0-100)[~LF][~LF]¹ Time: GPS = sync | Temp. hour: local unequal hour (0,0[NDASH]11,9), “ἡ” day / “ν” night. “φ” night watch (0φ00[NDASH]3φ59) | {lighttime-}: see below | Daylight & Agnihotra: sunrise[NDASH]sunset today [sunrise tomorrow], ⁺ = current GPS | ² Full/New Moon: moment (in/ago days) | Lunar night: see below | ³ Moon ≈ 2000 arcsec | ⁴ Weather: Daily progression ([font=sdata/DejaVuSansMono.ttf]☀[/font] sun, [font=sdata/DejaVuSansMono.ttf]◴[/font] progress (₁₂₃ = current 3h block), [font=sdata/DejaVuSansMono.ttf]☂[/font] rain clickable = radar, [font=sdata/DejaVuSansMono.ttf]✈[/font] gusts). Now = next 3 hours, [font=sdata/DejaVuSansMono.ttf]✝[/font] = older data | Below daily values: min...max...[night min] (χ = snow)[DF][DF]",
-    "txlegende0": "[b]–– Explanations:[/b][~LF][~LF]The lunar date works like our date, but with nights instead of days: Μx·y (p/z), with x = lunar “month” of the year, y = night of the lunar month. Μ1 is the first full moon of the light year (≈ Chinese New Year). As lunar months vary in length, z gives the total nights of the lunar month, p the Full Moon night. The night ends at sunrise.[~LF][~LF]The light-year season divides the year into eight phases of increasing and decreasing daylight: 1. {solcal_lph|0-} ({solcal_dat0}, see also Imbolc), 2a. {solcal_lph|1-} ({solcal_dat1}, see also Lixia), 2b. {solcal_lph|2-} ({solcal_dat2}), 2c. {solcal_lph|3-} ({solcal_dat3}), 3. {solcal_lph|4-} ({solcal_dat4}), 4a. {solcal_lph|5-} ({solcal_dat5}), 4b. {solcal_lph|6-} ({solcal_dat6}) and 4c. {solcal_lph|7-} ({solcal_dat7}). Short form: Ϟx·y (x = phase, y = progress in[SP]%). Dates are determined astronomically and shift from year to year.[DF][DF][DF]",
+    "txlegende0": "[b]–– Explanations:[/b][~LF][~LF]The lunar date works like our date, but with nights instead of days: Μx·y (p/z), with x = lunar “month” of the year, y = night of the lunar month. Μ1 is the first full moon of the light year (≈ Chinese New Year, night-based). As lunar months vary in length, z gives the total nights of the lunar month, p the Full Moon night. The night ends at sunrise.[~LF][~LF]The light-year season divides the year into eight phases of increasing and decreasing daylight: 1. {solcal_lph|0-} ({solcal_dat0}, see also Imbolc), 2a. {solcal_lph|1-} ({solcal_dat1}, see also Lixia), 2b. {solcal_lph|2-} ({solcal_dat2}), 2c. {solcal_lph|3-} ({solcal_dat3}), 3. {solcal_lph|4-} ({solcal_dat4}), 4a. {solcal_lph|5-} ({solcal_dat5}), 4b. {solcal_lph|6-} ({solcal_dat6}) and 4c. {solcal_lph|7-} ({solcal_dat7}). Short form: Ϟx·y (x = phase, y = progress in[SP]%). Dates are determined astronomically and shift from year to year.[DF][DF][DF]",
     "buttonsolcal": "Light calendar",
     "txradar": "Rain radar",
     "char_vowels": "aeiouyäöüáéíóúÄÖÜÁÉÍÓÚ",
