Änderungen von Rechner 2 (V3)

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.9.4",
-        "updated": "2026-02-26 14:14:19"
+        "version": "1.9.5",
+        "updated": "2026-02-27 15:40:43"
     },
     "txwelcome": "Welcome",
     "quotes": [
@@ -93,8 +93,10 @@
         "en": "English",
         "es": "Spanish",
         "fr": "French",
+        "ru": "Russian",
         "zh": "Chinese"
     },
+    "lang_latin": "",
     "txweathapi": "Weather",
     "txweathapiarr": {
         "auto": "automatic",
