--- a/lang/zh.json
+++ b/lang/zh.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.9.4",
-        "updated": "2026-02-26 14:14:19"
+        "version": "1.9.5",
+        "updated": "2026-02-27 15:40:43"
     },
     "txwelcome": "欢迎",
     "quotes": [
@@ -102,6 +102,7 @@
         "it": "Italiano",
         "zh": "中文"
     },
+    "lang_latin": "Zhōngwén",
     "txweathapi": "天气",
     "txweathapiarr": {
         "auto": "自动",
