--- a/lang/de.json
+++ b/lang/de.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.9.4",
-        "updated": "2026-02-26 14:14:19"
+        "version": "1.9.5",
+        "updated": "2026-02-27 15:40:43"
     },
     "txwelcome": "Willkommen",
     "quotes": [
@@ -89,6 +89,7 @@
         "ru": "Russisch",
         "zh": "Chinesisch"
     },
+    "lang_latin": "",
     "txweathapi": "Wetter",
     "txweathapiarr": {
         "auto": "automatisch",
